changed the font and corrected unauthorized navbar spacing

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -40,4 +40,5 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  font-family: 'Merriweather', serif;
 }
