--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -13,6 +13,10 @@ a{
   margin-left: 65%;
 }
 
+.unauthorized{
+  margin-left: 75%;
+}
+
 .calendarIcon{
   height: 25px;
   margin-right: 5px;
